--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,6 +3,7 @@
 		<meta charset="utf-8">
 		<title>Shannon Mosley IP-Addresses-Distance-Calculator</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css" type="text/css">
 	</head>
 	<body>
