--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,6 +8,9 @@
 	</head>
 	<body>
 		<div id="app" />
+		<script async defer
+	    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAoo5LstczdK0WWb2NPRihWM4YkRFvoBas">
+	    </script>
 		<script src="public/bundle.js" type="text/javascript"></script>
 	</body>
 </html>
